[package]
name = "rxn_simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { git = "https://github.com/leptos-rs/leptos.git" }
console_log = "0.2"
log = "0.4"
console_error_panic_hook = "0.1.7"
instant = { version = "0.1", features = [ "wasm-bindgen", "inaccurate" ] }

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.0"
web-sys = "0.3"